--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "2.4"
 services:
-    dlms-cim-meter1:
+    dlms-access-point-meter1:
         build:
             args:
-                - projectsourcename=dlms-cim-1.0.0-Source
+                - projectsourcename=dlms-access-point-1.0.0-Source
             context: .
             target: demo
         entrypoint: 
@@ -17,10 +17,10 @@ services:
           net.ipv6.conf.all.disable_ipv6: 0
 
 
-    dlms-cim-meter2:
+    dlms-access-point-meter2:
         build:
             args:
-                - projectsourcename=dlms-cim-1.0.0-Source
+                - projectsourcename=dlms-access-point-1.0.0-Source
             context: .
             target: demo
         entrypoint: 
@@ -33,10 +33,10 @@ services:
         sysctls:
           net.ipv6.conf.all.disable_ipv6: 0
 
-    dlms-cim-docs:
+    dlms-access-point-docs:
         build:
             args:
-                - projectsourcename=dlms-cim-1.0.0-Source
+                - projectsourcename=dlms-access-point-1.0.0-Source
             context: .
             target: docserver
         ports:
@@ -44,17 +44,17 @@ services:
         networks:
             - docnet
 
-    dlms-cim-hes:
+    dlms-access-point-hes:
         build:
             args:
-                - projectsourcename=dlms-cim-1.0.0-Source
+                - projectsourcename=dlms-access-point-1.0.0-Source
             context: .
             target: demo
         entrypoint: 
             - /tmp/HESsim
             - "8888"
-            - dlms-cim-meter1
-            - dlms-cim-meter2
+            - dlms-access-point-meter1
+            - dlms-access-point-meter2
         expose:
             - "8888/tcp"
         networks:
@@ -63,18 +63,18 @@ services:
         sysctls:
           net.ipv6.conf.all.disable_ipv6: 0
 
-    dlms-cim-cis:
+    dlms-access-point-cis:
         build:
             args:
-                - projectsourcename=dlms-cim-1.0.0-Source
+                - projectsourcename=dlms-access-point-1.0.0-Source
             context: .
             target: demo
         entrypoint: 
             - /tmp/CISsim
-            - "http://dlms-cim-hes:8888"
-            - "http://dlms-cim-cis"
+            - "http://dlms-access-point-hes:8888"
+            - "http://dlms-access-point-cis"
         depends_on:
-            - dlms-cim-hes
+            - dlms-access-point-hes
         networks:
             - hesnet
         sysctls:
