--- a/src/docker/docker-compose.yml.in
+++ b/src/docker/docker-compose.yml.in
@@ -1,64 +1,47 @@
 version: "2.4"
 services:
-    dlms-access-point-meter1:
+    meter:
         build:
             context: src
             target: demo
         entrypoint: 
             - /tmp/Metersim 
-            - "M1001"
         expose:
             - "4059/tcp"
         networks:
             - meternet
-        volumes:
-            - ./src:/tmp:z
+        sysctls:
+          net.ipv6.conf.all.disable_ipv6: 0
 
-    dlms-access-point-meter2:
+    access-point:
         build:
             context: src
             target: demo
         entrypoint: 
-            - /tmp/Metersim 
-            - "M1002"
+            - /bin/bash
         expose:
             - "4059/tcp"
         networks:
             - meternet
-        volumes:
-            - ./src:/tmp:z
+            - hesnet
+        sysctls:
+          net.ipv6.conf.all.disable_ipv6: 0
 
-    dlms-access-point-hes:
+    hes:
         build:
             context: src
             target: demo
         entrypoint: 
             - /tmp/HESsim
-            - "8888"
             - dlms-access-point-meter1
             - dlms-access-point-meter2
-        expose:
-            - "8888/tcp"
+            - dlms-access-point-meter3
         networks:
             - hesnet
-            - meternet
-        volumes:
-            - ./src:/tmp:z
+        sysctls:
+          net.ipv6.conf.all.disable_ipv6: 0
 
-    dlms-access-point-cis:
-        build:
-            context: src
-            target: demo
-        entrypoint: 
-            - /tmp/CISsim
-            - "http://dlms-access-point-hes:8888"
-            - "http://dlms-access-point-cis"
-        networks:
-            - hesnet
-        volumes:
-            - ./src:/tmp:z
-
-    dlms-access-point-docs:
+    docs:
         build:
             context: doc/html
             target: docserver
@@ -72,6 +55,13 @@ services:
 networks:
     docnet:
     hesnet:
+        enable_ipv6: true
+        driver: bridge
     meternet:
+        enable_ipv6: true
+        driver: bridge
+        ipam:
+            driver: default
+            config:
+                - subnet: 2001:3200:3200::/64
 
-    
