--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "2.4"
 services:
-    dlms-access-point-meter1:
+    meter:
         build:
             args:
                 - projectsourcename=dlms-access-point-1.0.0-Source
@@ -8,32 +8,27 @@ services:
             target: demo
         entrypoint: 
             - /tmp/Metersim 
-            - "M1001"
         expose:
             - "4059/tcp"
         networks:
-            meternet:
+            - meternet
         sysctls:
-          net.ipv6.conf.all.disable_ipv6: 0
+            net.ipv6.conf.all.disable_ipv6: 0
 
 
-    dlms-access-point-meter2:
-        build:
-            args:
-                - projectsourcename=dlms-access-point-1.0.0-Source
-            context: .
-            target: demo
+    hes:
+        image: demo
         entrypoint: 
-            - /tmp/Metersim 
-            - "M1002"
-        expose:
-            - "4059/tcp"
+            - /tmp/HESsim
+            - dlms-access-point-meter1
+            - dlms-access-point-meter2
+            - dlms-access-point-meter3
         networks:
-            meternet:
+            - meternet
         sysctls:
-          net.ipv6.conf.all.disable_ipv6: 0
+            net.ipv6.conf.all.disable_ipv6: 0
 
-    dlms-access-point-docs:
+    docs:
         build:
             args:
                 - projectsourcename=dlms-access-point-1.0.0-Source
@@ -44,45 +39,8 @@ services:
         networks:
             - docnet
 
-    dlms-access-point-hes:
-        build:
-            args:
-                - projectsourcename=dlms-access-point-1.0.0-Source
-            context: .
-            target: demo
-        entrypoint: 
-            - /tmp/HESsim
-            - "8888"
-            - dlms-access-point-meter1
-            - dlms-access-point-meter2
-        expose:
-            - "8888/tcp"
-        networks:
-            hesnet:
-            meternet:
-        sysctls:
-          net.ipv6.conf.all.disable_ipv6: 0
-
-    dlms-access-point-cis:
-        build:
-            args:
-                - projectsourcename=dlms-access-point-1.0.0-Source
-            context: .
-            target: demo
-        entrypoint: 
-            - /tmp/CISsim
-            - "http://dlms-access-point-hes:8888"
-            - "http://dlms-access-point-cis"
-        depends_on:
-            - dlms-access-point-hes
-        networks:
-            - hesnet
-        sysctls:
-          net.ipv6.conf.all.disable_ipv6: 1
-
 networks:
     docnet:
-    hesnet:
     meternet:
         enable_ipv6: true
         driver: bridge
