--- a/src/docker/Dockerfile-doc.in
+++ b/src/docker/Dockerfile-doc.in
@@ -7,7 +7,7 @@ RUN dnf update -y \
 
 WORKDIR /tmp/build/doc/html/
 RUN git clone https://github.com/Freeboard/freeboard.git dashboard
-RUN cp /tmp/dashboard/package.json dashboard/package.json
+COPY package.json dashboard/package.json
 RUN cd dashboard && npm install; npm install grunt-cli underscore
 
 FROM nginx:alpine AS docserver
