Add config to CMakeLists and add stream overloads.

--- a/src/websocket/CMakeLists.txt
+++ b/src/websocket/CMakeLists.txt
@@ -7,8 +7,10 @@ find_package(Threads REQUIRED)
 
 ## finally some executables
 add_executable(webMsgServer server.cpp)
+add_executable(HESConfig HESConfig.cpp)
 if(Boost_FOUND) 
     target_include_directories(webMsgServer PRIVATE ${Boost_INCLUDE_DIRS})
+    target_include_directories(HESConfig PRIVATE ${Boost_INCLUDE_DIRS})
     target_link_libraries(webMsgServer PRIVATE Boost::system ${CMAKE_THREAD_LIBS_INIT})
 endif(Boost_FOUND)
 
