Refactor HESConfig and websocket server.

--- a/src/websocket/CMakeLists.txt
+++ b/src/websocket/CMakeLists.txt
@@ -6,11 +6,9 @@ find_package(Boost REQUIRED COMPONENTS system)
 find_package(Threads REQUIRED)
 
 ## finally some executables
-add_executable(webMsgServer server.cpp)
-add_executable(HESConfig HESConfig.cpp)
+add_library(HESConfig HESConfig.cpp server.cpp)
 if(Boost_FOUND) 
-    target_include_directories(webMsgServer PRIVATE ${Boost_INCLUDE_DIRS})
     target_include_directories(HESConfig PRIVATE ${Boost_INCLUDE_DIRS})
-    target_link_libraries(webMsgServer PRIVATE Boost::system ${CMAKE_THREAD_LIBS_INIT})
+    target_link_libraries(HESConfig PRIVATE Boost::system ${CMAKE_THREAD_LIBS_INIT})
 endif(Boost_FOUND)
 
