--- a/src/docker/demo/Dockerfile
+++ b/src/docker/demo/Dockerfile
@@ -5,3 +5,4 @@ WORKDIR /tmp/
 COPY --from=beroset/dlms-access-point-builder /tmp/build/src/DLMS_sim .
 COPY --from=beroset/dlms-access-point-builder /tmp/build/src/HESsim .
 COPY --from=beroset/dlms-access-point-builder /tmp/build/src/Metersim .
+COPY --from=beroset/dlms-access-point-builder /tmp/src/docker/demo/docker-entrypoint.sh .
