--- a/src/docker/dashboard/Dockerfile
+++ b/src/docker/dashboard/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:alpine AS dashboard
 COPY --from=beroset/dlms-access-point-builder /tmp/build/doc/html/dashboard /usr/share/nginx/html
-COPY src/docker/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=beroset/dlms-access-point-builder /tmp/src/docker/docserver/default.conf /etc/nginx/conf.d/default.conf
