Add APsim to list of copied executables for docker.

--- a/src/docker/demo/Dockerfile
+++ b/src/docker/demo/Dockerfile
@@ -5,4 +5,6 @@ WORKDIR /tmp/
 COPY --from=beroset/dlms-access-point-builder /tmp/build/src/DLMS_sim .
 COPY --from=beroset/dlms-access-point-builder /tmp/build/src/HESsim .
 COPY --from=beroset/dlms-access-point-builder /tmp/build/src/Metersim .
+COPY --from=beroset/dlms-access-point-builder /tmp/build/src/APsim .
+COPY --from=beroset/dlms-access-point-builder /tmp/build/src/websocket/taskrunner .
 COPY --from=beroset/dlms-access-point-builder /tmp/src/docker/demo/docker-entrypoint.sh .
