--- a/src/docker/demo/Dockerfile
+++ b/src/docker/demo/Dockerfile
@@ -2,9 +2,4 @@ FROM fedora:32 AS demo
 RUN dnf update -y \
     && dnf install -y iputils iproute nmap-ncat
 WORKDIR /tmp/
-COPY --from=beroset/dlms-access-point-builder /tmp/build/src/DLMS_sim .
-COPY --from=beroset/dlms-access-point-builder /tmp/build/src/HESsim .
-COPY --from=beroset/dlms-access-point-builder /tmp/build/src/Metersim .
-COPY --from=beroset/dlms-access-point-builder /tmp/build/src/APsim .
-COPY --from=beroset/dlms-access-point-builder /tmp/build/src/websocket/taskrunner ./websocket/.
-COPY --from=beroset/dlms-access-point-builder /tmp/src/docker/demo/docker-entrypoint.sh .
+COPY --from=beroset/dlms-access-point-builder /usr/local/bin /usr/local/bin
