Correct installation of docker-entrypoint.sh file for demo.

--- a/src/docker/CMakeLists.txt
+++ b/src/docker/CMakeLists.txt
@@ -34,4 +34,4 @@ add_custom_target(
 )
 
 ## install things
-INSTALL(TARGETS docker-entrypoint.sh DESTINATION bin)
+INSTALL(FILE docker-entrypoint.sh DESTINATION bin)
