Fix entrypoint script and installer.

--- a/src/docker/CMakeLists.txt
+++ b/src/docker/CMakeLists.txt
@@ -34,4 +34,4 @@ add_custom_target(
 )
 
 ## install things
-INSTALL(FILES docker-entrypoint.sh DESTINATION bin)
+INSTALL(PROGRAMS docker-entrypoint.sh DESTINATION bin)
