--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,21 @@ services:
             net.ipv6.conf.all.disable_ipv6: 0
             net.ipv6.conf.all.forwarding: 1
 
+    hes:
+        image: beroset/dlms-access-point
+        entrypoint: 
+            - /usr/local/bin/HESsim
+            - 2001:3200:3201::100:101
+        expose:
+            - "4059/tcp"
+        ports:
+            - "4060:4060"
+        networks:
+            backhaul:
+              ipv6_address: 2001:3200:3201::100:100
+        sysctls:
+            net.ipv6.conf.all.disable_ipv6: 0
+
     meter:
         image: beroset/dlms-access-point
         entrypoint: 
@@ -38,27 +53,13 @@ services:
         sysctls:
             net.ipv6.conf.all.disable_ipv6: 0
 
-    hes:
-        image: beroset/dlms-access-point
-        entrypoint: 
-            - /usr/local/bin/HESsim
-            - 2001:3200:3201::100:101
-        expose:
-            - "4059/tcp"
-        ports:
-            - "4060:4060"
-        networks:
-            backhaul:
-              ipv6_address: 2001:3200:3201::100:100
-        sysctls:
-            net.ipv6.conf.all.disable_ipv6: 0
-
     dashboard:
         image: beroset/dlms-access-point-dashboard
         ports:
             - "8081:80"
         networks:
             - meternet
+            - backhaul
         sysctls:
             net.ipv6.conf.all.disable_ipv6: 0
 
