--- a/src/docker/docker-compose.yml.in
+++ b/src/docker/docker-compose.yml.in
@@ -5,7 +5,7 @@ services:
             context: src
             target: demo
         entrypoint: 
-            - /tmp/docker-entrypoint.sh
+            - /usr/local/bin/docker-entrypoint.sh
             - "access-point"
             - 2001:3200:3201::100:100 
             - "8888"
@@ -19,7 +19,7 @@ services:
             backhaul:
               ipv6_address: 2001:3200:3201::100:101
         volumes:
-            - ./src:/tmp:z
+            - ./bin:/usr/local/bin:z
         cap_add:
             - NET_ADMIN
         sysctls:
@@ -31,7 +31,7 @@ services:
             context: src
             target: demo
         entrypoint: 
-            - /tmp/HESsim
+            - /usr/local/bin/HESsim
             - 2001:3200:3201::100:101
         expose:
             - "4059/tcp"
@@ -41,7 +41,7 @@ services:
             backhaul:
               ipv6_address: 2001:3200:3201::100:100
         volumes:
-            - ./src:/tmp:z
+            - ./bin:/usr/local/bin:z
         sysctls:
             net.ipv6.conf.all.disable_ipv6: 0
 
@@ -50,7 +50,7 @@ services:
             context: src
             target: demo
         entrypoint: 
-            - /tmp/docker-entrypoint.sh
+            - /usr/local/bin/docker-entrypoint.sh
             - "meter"
             - 2001:3200:3201::100:100 
             - "8888"
@@ -59,7 +59,7 @@ services:
         networks:
             - meternet
         volumes:
-            - ./src:/tmp:z
+            - ./bin:/usr/local/bin:z
         cap_add:
             - NET_ADMIN
         sysctls:
@@ -80,7 +80,7 @@ services:
             context: doc/html
             target: docserver
         ports:
-                - "8080:80"
+            - "8080:80"
         networks:
             - docnet
         volumes:
