--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -2,9 +2,14 @@
   "name": "freeboard",
   "title": "freeboard",
   "version": "1.1.3",
+  { "license": "MIT" },
+  "repository": {
+     "type" : "git",
+     "url" : "https://github.com/Freeboard/freeboard"
+  },
   "devDependencies": {
-    "grunt": "1.3.0",
-    "grunt-contrib-concat": "0.1.3",
+    "grunt": "^1.3.0",
+    "grunt-contrib-concat": "^0.1.3",
     "grunt-contrib-cssmin": "3.0.0",
     "grunt-contrib-uglify": "5.0.0",
     "grunt-contrib-watch": "1.1.0",
