--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -2,7 +2,7 @@
   "name": "freeboard",
   "title": "freeboard",
   "version": "1.1.3",
-  { "license": "MIT" },
+  "license": "MIT",
   "repository": {
      "type" : "git",
      "url" : "https://github.com/Freeboard/freeboard"
