Directly use docker instead of shell script for codeflow

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,7 +64,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-       bash ./build.sh
+       docker build --target builder -t "beroset/dlms-access-point-builder"
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
